// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DelightfulTag > Snapshot test > Different styles tag snapshot 1`] = `
<DocumentFragment>
  <span
    class="delightful-tag delightful-tag-success acss-1mtoqz4 css-dev-only-do-not-override-yotw4n css-var-r6"
  >
    Success tag
    <svg
      aria-label="Close"
      class="tabler-icon tabler-icon-x delightful-tag-close-icon"
      fill="none"
      height="16"
      stroke="rgba(28,29,35, 0.8)"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 6l-12 12"
      />
      <path
        d="M6 6l12 12"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`DelightfulTag > Snapshot test > Different styles tag snapshot 2`] = `
<DocumentFragment>
  <span
    class="delightful-tag delightful-tag-warning acss-1mtoqz4 css-dev-only-do-not-override-yotw4n css-var-r7"
  >
    Warning tag
    <svg
      aria-label="Close"
      class="tabler-icon tabler-icon-x delightful-tag-close-icon"
      fill="none"
      height="16"
      stroke="rgba(28,29,35, 0.8)"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 6l-12 12"
      />
      <path
        d="M6 6l12 12"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`DelightfulTag > Snapshot test > Different colors tag snapshot 1`] = `
<DocumentFragment>
  <span
    class="delightful-tag delightful-tag-blue acss-1mtoqz4 css-dev-only-do-not-override-yotw4n css-var-r2"
  >
    Blue tag
    <svg
      aria-label="Close"
      class="tabler-icon tabler-icon-x delightful-tag-close-icon"
      fill="none"
      height="16"
      stroke="rgba(28,29,35, 0.8)"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 6l-12 12"
      />
      <path
        d="M6 6l12 12"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`DelightfulTag > Snapshot test > Different colors tag snapshot 2`] = `
<DocumentFragment>
  <span
    class="delightful-tag delightful-tag-red acss-1mtoqz4 css-dev-only-do-not-override-yotw4n css-var-r3"
  >
    Red tag
    <svg
      aria-label="Close"
      class="tabler-icon tabler-icon-x delightful-tag-close-icon"
      fill="none"
      height="16"
      stroke="rgba(28,29,35, 0.8)"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 6l-12 12"
      />
      <path
        d="M6 6l12 12"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`DelightfulTag > Snapshot test > Different colors tag snapshot 3`] = `
<DocumentFragment>
  <span
    class="delightful-tag delightful-tag-green acss-1mtoqz4 css-dev-only-do-not-override-yotw4n css-var-r4"
  >
    Green tag
    <svg
      aria-label="Close"
      class="tabler-icon tabler-icon-x delightful-tag-close-icon"
      fill="none"
      height="16"
      stroke="rgba(28,29,35, 0.8)"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 6l-12 12"
      />
      <path
        d="M6 6l12 12"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`DelightfulTag > Snapshot test > Closable tag snapshot 1`] = `
<DocumentFragment>
  <span
    class="delightful-tag delightful-tag-default acss-1mtoqz4 css-dev-only-do-not-override-yotw4n css-var-r8"
  >
    Closable tag
    <svg
      aria-label="Close"
      class="tabler-icon tabler-icon-x delightful-tag-close-icon"
      fill="none"
      height="16"
      stroke="rgba(28,29,35, 0.8)"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 6l-12 12"
      />
      <path
        d="M6 6l12 12"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`DelightfulTag > Snapshot tests > Icon tag snapshot 1`] = `
<DocumentFragment>
  <span
    class="delightful-tag acss-1mtoqz4 css-dev-only-do-not-override-yotw4n css-var-r9"
  >
    <span>
      🏷️
    </span>
    <span>
      Tag with icon
    </span>
    <svg
      aria-label="Close"
      class="tabler-icon tabler-icon-x delightful-tag-close-icon"
      fill="none"
      height="16"
      stroke="rgba(28,29,35, 0.8)"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 6l-12 12"
      />
      <path
        d="M6 6l12 12"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`DelightfulTag > Snapshot tests > Bordered tag snapshot 1`] = `
<DocumentFragment>
  <span
    class="delightful-tag acss-1mtoqz4 css-dev-only-do-not-override-yotw4n css-var-r8"
  >
    Bordered tag
    <svg
      aria-label="Close"
      class="tabler-icon tabler-icon-x delightful-tag-close-icon"
      fill="none"
      height="16"
      stroke="rgba(28,29,35, 0.8)"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 6l-12 12"
      />
      <path
        d="M6 6l12 12"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`DelightfulTag > Snapshot test > Default tag snapshot 1`] = `
<DocumentFragment>
  <span
    class="delightful-tag delightful-tag-default acss-1mtoqz4 css-dev-only-do-not-override-yotw4n css-var-r1"
  >
    Default tag
    <svg
      aria-label="Close"
      class="tabler-icon tabler-icon-x delightful-tag-close-icon"
      fill="none"
      height="16"
      stroke="rgba(28,29,35, 0.8)"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 6l-12 12"
      />
      <path
        d="M6 6l12 12"
      />
    </svg>
  </span>
</DocumentFragment>
`;
